2010-04-02 yusuke
* Fixed the column name conflict.

2010-03-03 yusuke
* Use sql_deferred_connection instead of sql_connection

2010-03-02 yusei
* Remove short title.

2010-02-26 yusuke
* supports catalog search.

2010-01-19 yusei
* Now translation accessors return original value if there is no translation. For translation UI of content translation, use no_original_value parameter and do not display original value in input fields.

2009-11-05 yusei
* Initial release.

2009-09-02 yusei
* Pre-release for review.