@@ -1,3 +1,6 @@
+2011-12-20 Kazuhiko
+* use groonga storage engine instead of MyISAM.
+
 2010-04-02 yusuke
 * Fixed the column name conflict.
 
